<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   -->
  <name>flaky</name>
  <version>3.1.0</version>
  <description>
  Plugin for nose or py.test that automatically reruns flaky tests.
  </description>

  <license>Apache</license>

  <url type="repository">https://github.com/box/flaky</url>
  <url type="bugtracker">https://github.com/box/flaky/issues</url>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <!-- <depend></depend> -->

  <export>
    <rosdoc external_url="https://github.com/box/flaky" />
  </export>

</package>


