<?xml version="1.0"?>
<package format="2">
  <name>genty</name>
  <version>1.3.0</version>
  <description>
  Genty, pronounced "gen-tee", stands for "generate tests". It promotes generative testing, where a single test can execute over a variety of input.
  </description>

  <license>Apache</license>

  <url type="repository">https://github.com/box/genty</url>
  <url type="bugtracker">https://github.com/box/genty/issues</url>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <depend>python-six</depend>
  <depend>python-mock</depend>

  <export>
    <rosdoc external_url="https://github.com/box/genty" />
  </export>

</package>


