<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   -->
  <name>python-flask-restful</name>
  <version>0.3.4</version>
  <description>
  Simple framework for creating REST APIs http://flask-restful.readthedocs.io
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/flask-restful/flask-restful.git</url>
  <url type="bugtracker">https://github.com/flask-restful/flask-restful.git/issues</url>

  <author>Twilio API Team</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <depend version_gte="0.10.1">python-flask</depend>
  <depend version_gte="1.5.2">python-six</depend>
  <depend>python-aniso8601</depend>
  <depend>python-tz</depend>

  <test_depend>python-mock</test_depend>
  <test_depend>python-blinker</test_depend>
  <test_depend>python-crypto</test_depend>

  <export>
    <rosdoc external_url="http://flask-restful.readthedocs.io/" />
  </export>

</package>


