<?xml version="1.0"?>
<package>
  <name>python-pathtools</name>
  <version>0.1.2</version>
  <description>File system general utilities</description>
  <maintainer email="tkostas75@gmail.com">Thomas Kostas</maintainer>
  
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pip</build_depend>

</package>
